proc-macro-error/test-crate/tests/ui/unrelated_panic.stderr
error: proc macro panicked
 --> $DIR/unrelated_panic.rs:4:1
  |
4 | make_fn!();
  | ^^^^^^^^^^^
  |
  = help: message: unrelated panic test
