proc-macro-error/test-crate/tests/ui/unrelated_panic.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!();

fn main() {}
